# fcitx5-osk

./: CMakeLists.txt  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
assets/key_sets/: default.toml
assets/layouts/: default-landscape.toml  default-portrait.toml  default.toml
fcitx5-osk/: Cargo.toml
fcitx5-osk-common/: Cargo.toml
fcitx5-osk-common/src/: dbus.rs  lib.rs  log.rs  signal.rs
fcitx5-osk-key-helper/: Cargo.toml
fcitx5-osk-key-helper/src/: config.rs  dbus.rs  keyboard.rs  main.rs
fcitx5-osk-kwin-launcher/: Cargo.toml
fcitx5-osk-kwin-launcher/src/: dbus.rs  main.rs
fcitx5-osk/src/: app.rs  config.rs  custom_action.rs  font.rs  key_set.rs  layout.rs  main.rs  misc.rs  state.rs  store.rs  theme.rs  widget.rs  window.rs
fcitx5-osk/src/app/: wayland.rs  x11.rs
fcitx5-osk/src/app/wayland/: connection.rs  input_method.rs  output.rs
fcitx5-osk/src/app/x11/: output.rs
fcitx5-osk/src/dbus/: client.rs  server.rs
fcitx5-osk/src/state/: config.rs  im.rs  keyboard.rs  layout.rs  window.rs
fcitx5-osk/src/store/: default_value.rs
fcitx5-osk/src/widget/: button.rs  debugger.rs  key.rs  movable.rs  toggle.rs
fcitx5-osk/src/window/: wayland.rs  x11.rs
pkg/archlinux/: PKGBUILD
pkg/lib/systemd/system/: fcitx5-osk-key-helper.service  fcitx5-osk-key-helper.service.in
pkg/share/applications/: fcitx5-osk-kwin-launcher.desktop  fyi.fortime.Fcitx5Osk.KwinLauncher.desktop.in  fyi.fortime.Fcitx5Osk.desktop  fyi.fortime.Fcitx5Osk.desktop.in
pkg/share/dbus-1/services/: fyi.fortime.Fcitx5Osk.service  fyi.fortime.Fcitx5Osk.service.in
pkg/share/dbus-1/system.d/: fyi.fortime.Fcitx5OskKeyHelper.conf
pkg/share/fcitx5-osk/: landscape-wider-1.toml
pkg/share/fcitx5-osk/themes/: breeze-light.toml
src/: app.rs  config.rs  fcitx5.rs  font.rs  key_set.rs  keyboard.rs  layout.rs  main.rs  state.rs  store.rs  widget.rs  window.rs
src/app/: wayland.rs  x11.rs
src/dbus/: client.rs  server.rs
src/keyboard/: state.rs
src/state/: config.rs  im.rs  keyboard.rs  layout.rs  window.rs
src/store/: default_value.rs
src/widget/: key.rs  movable.rs  toggle.rs
src/window/: wayland.rs  x11.rs
