[workspace]
resolver = "2"
members = [
    "fcitx5-osk",
    "fcitx5-osk-common",
    "fcitx5-osk-key-helper",
    "fcitx5-osk-kwin-launcher"
]

[workspace.metadata.typos.default.extend-words]
typ = "typ"

[workspace.package]
description = "An onscreen keyboard working with fcitx5"
authors = [
    "palfortime@gmail.com"
]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["wayland", "kwin", "virtual keyboard", "onscreen keyboard"]
repository = "https://github.com/fortime/fcitx5-osk"
readme = "README.md"

[workspace.dependencies]
fcitx5-osk-common = { version = "0.1", path = "./fcitx5-osk-common" }

anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
dark-light = "1.1.1"
figment = { version = "0.10.19", features = ["toml"] }
getset = "0.1.3"
iced = { version = "0.13.1", features = ["tokio", "image", "svg", "advanced"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread", "signal"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xkeysym = "0.2.1"
zbus = { version = "5.2.0", features = ["tokio"], default-features = false }
zvariant = "5.1.0"
iced_layershell = "0.13.5"
iced_futures = "0.13.2"
iced_graphics = "0.13.0"
humantime-serde = "1.1.1"
x11rb = { version = "0.13.1", default-features = false, features = ["dl-libxcb"] }
strum = { version = "0.27.1", features = ["derive"] }
console-subscriber = "0.4.1"
futures-util = "0.3.31"
async-trait = "0.1.88"
wayland-client = "0.31.8"
wayland-protocols = "0.32.6"
wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = ["client"] }
tempfile = "3.24.0"
evdev = { version = "0.13.1", features = ["tokio"] }
rand = "0.9.1"

[patch.crates-io]
iced_layershell = { git = "https://github.com/fortime/exwlshelleventloop.git", rev = "4b0b981826" }
#iced_layershell = { path = "../exwlshelleventloop/iced_layershell" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
